file reading git issue